# IN204-RayTracing

./: .gitignore  CMakeLists.txt  README.md  aabb.h  args.h  camera.h  color.h  common.h  constants.h  geometry.h  hittable.h  interval.h  main.cpp  material.h  ray.h  render.h  run.bat  run.sh  scene.json  texture.h  utils.h  vector.h
Camera/: camera.h
Geometry/: aabb.h  geometry.h  hittable.h  load_scene.h
Materials/: texture.h
Math/: ray.h  vector.h
Utilities/: args.h  clipp.h  color.h  debug.h
test/: test_vector.cpp
